# advent2024

./: .gitignore  Cargo.toml
day01/: star01.py  star01.rs  star02.py  star02.rs
day02/: star03.py  star04.py
day03/: input.txt  star05.py  star06.py
day04/: star07.py  star08.py
day05/: star09.py  star10.py
day06/: star11.py  star12.py
day07/: star13.py  star14.py
day08/: star15.py  star16.py
day09/: star17.py  star18.py
day10/: star19.py  star20.py
day11/: star21.py  star22.py
day12/: star23.py  star24.py
day13/: star25.py  star26.py
day14/: star27.py  star28.py
day15/: star29.py  star30.py
day16/: star31.py  star32.py
day17/: star33.py  star34.py
day18/: star35.py  star36.py
day19/: star37.py  star38.py
day20/: star39.py  star40.py
day21/: star41.py  star42.py
day22/: star43.py  star44.py
day23/: star45.py  star46.py
